lucia-macros/tests/ui/error_enum/unknown_data_format.stderr
error: Unknown data format.
 --> tests/ui/error_enum/unknown_data_format.rs:4:1
  |
4 | #[lucia_macros::pkg(api(Foo), data_format(fdsdfs))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `lucia_macros::pkg` (in Nightly builds, run with -Z macro-backtrace for more info)
